--- a/packages/stories-web/index.scss
+++ b/packages/stories-web/index.scss
@@ -1,2 +1,29 @@
 @use "@pepabo-inhouse/flavor" as flavor;
+@use "@pepabo-inhouse/adapter" as adapter;
 @include flavor.icon-font;
+
+.minor-stack-on {
+  padding: adapter.get-spacing-size($level: m);
+  box-shadow: adapter.get-elevation-box-shadow($level: 1);
+}
+
+.minor-stack-over {
+  position: absolute;
+  z-index: adapter.get-minor-stack-z-index($type: over, $level: 1);
+  width: 100%;
+  padding: adapter.get-spacing-size($level: m);
+  background-color: red;
+  box-shadow: adapter.get-elevation-box-shadow($level: 1);
+}
+
+.major-stack-0 {
+  // 適用するスタイルなし
+}
+
+.major-stack-1 {
+  position: absolute;
+  z-index: adapter.get-major-stack-z-index($layer: 1);
+  width: 100%;
+  height: 100vh;
+  background-color: rgb(0 0 0 / 50%);
+}
